[Brandon] Style Adjustment and Content Update

--- a/Brandon Git/contact-us.html
+++ b/Brandon Git/contact-us.html
@@ -24,20 +24,20 @@
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid">
         <div class="row h-100 justify-content-start align-items-center">
-            <div class="col-6 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188;">
-                <div class="container w-100" style="padding: 0 20%">
-                    <h1 style="text-transform: uppercase; font-size: 4rem;">
-                        Contact Us
+            <div class="col-8 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188;">
+                <div class="container w-100 px-5">
+                    <h1 style="font-size: 4rem;">
+                        We are hearing from you
                     </h1>
                     <p class="pt-4">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore iure aliquid ipsum consequuntur, ut neque enim dolores tempora ab expedita delectus id alias totam provident, explicabo assumenda excepturi iusto voluptatem?
+                        Whether you're curious about our packages, services or wish to book a test <br> <b>We are here for any and all of your needs</b>
                     </p>
                     <button class="button mt-5">
                         Drop a Message
                     </button>
                 </div>
             </div>
-            <div class="col-6 h-100 hero-banner-background"></div>
+            <div class="col-4 h-100 hero-banner-background"></div>
         </div>
     </section>
 
@@ -49,9 +49,9 @@
         <h1 class="text-center" style="font-size: 1.5rem">
             Check out the helpers below
         </h1> 
-        <div class="row w-100 mx-auto" style="margin-top: 3rem ">
+        <div class="row w-100 mx-auto gx-5" style="margin-top: 3rem ">
             <div class="col-lg-4 col-md-12 py-5">
-                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; width: 80%; border: none; border-radius: 0; padding: 3rem 2rem;">
+                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; border: none; border-radius: 0; padding: 3rem 2rem;">
                     <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
                         <img src="./quiz_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     </div>
@@ -67,7 +67,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 py-5">
-                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; width: 80%; border: none; border-radius: 0; padding: 3rem 2rem;">
+                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; border: none; border-radius: 0; padding: 3rem 2rem;">
                     <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
                         <img src="./package_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     </div>
@@ -83,7 +83,7 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-12 py-5">
-                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; width: 80%; border: none; border-radius: 0; padding: 3rem 2rem;">
+                <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; border: none; border-radius: 0; padding: 3rem 2rem;">
                     <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
                         <img src="./info_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     </div>
@@ -101,12 +101,12 @@
         </div>
     </section>
 
-    <hr style="width: 80%; margin: auto">
+    <hr style="width: 90%; margin: auto">
 
     <!-- Contact Form Section -->
     <section class="contact-form container-fluid">
         <div class="row w-100 h-100">
-            <div class="col-4 d-flex flex-column justify-content-between pe-3">
+            <div class="col-4 d-flex flex-column justify-content-between pe-4">
                 <div class="text-heading">
                     <h1 style="font-size: 1.5rem;">
                         Wanna
@@ -122,7 +122,7 @@
                     Wonder how your paticulars will be used? <br> Checkout our <b style="text-decoration: underline"> Privacy Policy </b>
                 </p>
             </div>
-            <div class="col-8" style="padding: 3rem; background-color: #FEBB60;">
+            <div class="col-8" style="padding: 3rem; background-color: #FEBB60">
                 <form action="/">
                     <div class="name mb-5">
                         <h1 style="font-size: 1.25rem" class="mb-4">
@@ -185,6 +185,10 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <button type="submit" class="button">
+                        Send
+                    </button>
                 </form>
             </div>
         </div>
@@ -201,7 +205,7 @@
                     </h1>
                 </div>
                 <div style="flex: 1;" class="d-flex flex-column justify-content-center">
-                    <p style="color: white; font-size: 1.5rem;">
+                    <p style="color: white; font-size: 1rem;">
                         <span class="material-symbols-outlined"> location_on </span> 20 McCallum Street #15-01/05 ASIA CHAMBERS
                     </p>
                 </div>
@@ -213,10 +217,10 @@
                     </h1>
                 </div>
                 <div style="flex: 1;" class="d-flex flex-column justify-content-center">
-                    <p style="color: #112F24; font-size: 1.5rem;">
+                    <p style="color: #112F24; font-size: 1rem; margin: 0;">
                         <span class="material-symbols-outlined"> call </span> +65 8052 8564
                     </p>
-                    <p style="color: #112F24; font-size: 1.5rem;">
+                    <p style="color: #112F24; font-size: 1rem;">
                         <span class="material-symbols-outlined"> mail </span> aurora@aurora.sg
                     </p>
                 </div>
