--- a/Garry/igm.html
+++ b/Garry/igm.html
@@ -213,7 +213,7 @@
         }
 
         .herobtn {
-            font-size: 2.5vw;
+            font-size: 1.5rem;
             text-align: center;
             align-items: center;
             justify-content: center;
@@ -287,7 +287,8 @@
             padding-right: 15%;
             background-color: #41B188;
             text-align: center;
-            color: white;
+            color: #333333;
+            background-color: white;
             padding-bottom: 5%;
         }
 
@@ -342,6 +343,35 @@
         .list-group {
             text-align: justify;
         }
+        a {
+            font-family: 'Noto Sans', sans-serif;
+            font-size: 1rem;
+        }
+        h1 {
+            color: white;
+        }
+        h3 {
+            font-size: 4rem;
+            font-family: "Playfair Display", serif;
+        }
+        .accordion-button
+        {
+            font-size: 1rem;
+            font-family: 'Noto Sans';
+        } 
+        li {
+            font-size: 1rem;
+            font-family: 'Noto Sans';
+        }       
+        h2 {
+            font-family: 'Playfair Display';
+            font-size: 3rem;
+        }
+        .list-group-item {
+            border-color: #41B188;
+            border-style: solid;
+            border-width: 2px;
+        }
     </style>
 </head>
 
@@ -381,8 +411,9 @@
                 <h2 style="text-align: left">What is a Serology / IGM Test?</h2>
                 <a style="text-align: left;">
                     Serology tests detect the presence of antibodies in the blood from the body’s adaptive immune response to an infection, like COVID-19.
-                    <br> 
-                <h2 style="text-align: justify">What is the difference between a Serology Test and PCR Swab Test?</h2>
+
+                    <br>
+                <h2 style="text-align: left">What is the difference between a Serology Test and PCR Swab Test?</h2>
                 <a>Individuals can only be diagnosed with COVID-19 infection when they undergo PCR swab testing.
 <br><br>
                     However, COVID-19 serology tests are unable to reveal whether a person is actively infected with the virus. Serology tests, which instead identify prior infections, are frequently used for contact tracing, international COVID-19 immunization verification, and pre-departure screening (if required by the destination country).</a>
@@ -398,7 +429,8 @@
         </div>
     </div>
     <div class="box2">
-        <h3 style="font-size: 2.8vw;">Commonly Asked Questions</h3>
+        <h1 style="text-transform: uppercase; font-size: 4rem; color: #333333; font-family: 'Playfair Display", serif; class="text-center">Commonly Asked Questions</h1>
+        <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
         <ul class="list-group">
             <li class="list-group-item d-flex justify-content-between align-items-start">
                 <div class="ms-2 me-auto">
@@ -439,7 +471,10 @@
           </ul>
     </div>
    <div class="box1">
-    <h3 style="font-size: 2.8vw;">Branches</h3>
+    <h1 style="text-transform: uppercase; font-size: 4rem; color: #333333; font-family: 'Playfair Display';" class="text-center">
+        Branches
+    </h1>
+    <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
     <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
