--- a/Marcel Git/home.html
+++ b/Marcel Git/home.html
@@ -75,8 +75,8 @@
         }
 
 
-        /*Start of Navbar*/
-        #fixedheader {
+         /*Start of Navbar*/
+         #fixedheader {
             position: fixed;
         }
 
@@ -91,6 +91,7 @@
             transition-duration: 0.4s;
 
             box-shadow: 0px 0px grey;
+            
         }
 
 
@@ -100,7 +101,7 @@
             text-decoration: none;
             color: #41B188;
             cursor: pointer;
-            font-size: 1.2vw;
+            font-size: 1.3em
 
         }
 
@@ -123,7 +124,7 @@
             font-weight: 400;
             text-decoration: none;
             color: #41B188;
-            font-size: 2.7vw;
+            font-size: 3rem;
             transition: all 0.3s linear;
             white-space: nowrap;
 
@@ -178,7 +179,7 @@
             padding: 0.3vw 0.7vw;
 
             white-space: nowrap;
-            font-size: 1.2vw;
+            font-size: 1.2rem;
             transition: 0.25s ease-in-out;
 
             color: white;
@@ -276,7 +277,7 @@
 
         .icontextrow {
             font-family: 'Noto Sans', sans-serif;
-            font-size: 3vw;
+            font-size: 2rem;
             font-weight: 200;
             margin-top: 2%;
         }
@@ -487,6 +488,10 @@
 
         .pcrbtn {
             margin-top: 7%;
+        }
+
+        .test-divider{
+            width: 100rem;
         }
 
         .artcontainer {
@@ -713,7 +718,7 @@
             </div>
         </div>
         <div class="row text-center icontextrow">
-            <div class="col-4">Fast</div>
+            <div class="col-4">Our experienced team of doctors </div>
             <div class="col-4 ">Accurate</div>
             <div class="col-4">Safe</div>
         </div>
@@ -802,13 +807,7 @@
                             d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z" />
                     </svg>
                 </div>
-                <div class="col "><a href="#" class="planmoredetails">Plan details</a>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="0.9vw" height="0.9vw" fill="currentColor"
-                        class="bi bi-arrow-up-right" viewBox="0 0 16 16" style="color:#333333;">
-                        <path fill-rule="evenodd"
-                            d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z" />
-                    </svg>
-                </div>
+                
 
             </div>
 
@@ -849,6 +848,8 @@
             </div>
         </div>
     </div>
+
+    <hr class="test-divider mx-auto">
 
     <!--ART Test Section-->
     <div class="container-fluid pcrcontainer artcontainer">
