[Brandon] Updated Hero Banner

--- a/Brandon Git/contact-us.html
+++ b/Brandon Git/contact-us.html
@@ -21,23 +21,44 @@
     <title>Contact Us</title>
 </head>
 <body>
+    <!--Navbar start-->
+    <div id="fixedheader" class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
+                class="logo logopt2">Medical</a></div>
+        <div class="col-3"></div>
+        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+
+    </div>
+
+    <!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
+    <div class="row header">
+        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
+        <div class="col-2"></div>
+        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
+        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
+        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+        <div class="col"></div>
+    </div>
+    <!--Navbar ends here-->
+
     <!-- Hero Banner -->
-    <section class="hero-banner container-fluid">
-        <div class="row h-100 justify-content-start align-items-center">
-            <div class="col-8 h-100 position-relative d-flex flex-column justify-content-center" style="background-color: #41b188;">
-                <div class="container w-100 px-5">
-                    <h1 style="font-size: 4rem;">
-                        We are hearing from you
-                    </h1>
-                    <p class="pt-4">
-                        Whether you're curious about our packages, services or wish to book a test <br> <b>We are here for any and all of your needs</b>
-                    </p>
-                    <button class="button mt-5">
-                        Drop a Message
-                    </button>
-                </div>
-            </div>
-            <div class="col-4 h-100 hero-banner-background"></div>
+    <section class="hero-banner container-fluid d-flex align-items-center justify-content-center">
+        <div class="text-center">
+            <h1 style="font-size: 4rem;">
+                We are here to hear from you
+            </h1>
+            <p class="pt-4">
+                Whether you're curious about our packages, services or wish to book a test <br> <b>We are here for any and all of your needs</b>
+            </p>
+            <button class="button mt-5">
+                Drop a Message
+            </button>
         </div>
     </section>
 
