added pdpc and updated header

--- a/Marcel Git/home.html
+++ b/Marcel Git/home.html
@@ -101,7 +101,7 @@
             text-decoration: none;
             color: #41B188;
             cursor: pointer;
-            font-size: 1.3em
+            font-size: 1rem
 
         }
 
@@ -124,7 +124,7 @@
             font-weight: 400;
             text-decoration: none;
             color: #41B188;
-            font-size: 3rem;
+            font-size: 2rem;
             transition: all 0.3s linear;
             white-space: nowrap;
 
@@ -179,7 +179,7 @@
             padding: 0.3vw 0.7vw;
 
             white-space: nowrap;
-            font-size: 1.2rem;
+            font-size: 1rem;
             transition: 0.25s ease-in-out;
 
             color: white;
