--- a/Marcel Git/countries.html
+++ b/Marcel Git/countries.html
@@ -94,7 +94,7 @@
             text-decoration: none;
             color: #41B188;
             cursor: pointer;
-            font-size: 1.3em
+            font-size: 1rem
         }
 
 
@@ -116,7 +116,7 @@
             font-weight: 400;
             text-decoration: none;
             color: #41B188;
-            font-size: 3rem;
+            font-size: 2rem;
             transition: all 0.3s linear;
             white-space: nowrap;
 
@@ -171,7 +171,7 @@
             padding: 0.3vw 0.7vw;
 
             white-space: nowrap;
-            font-size: 1.2rem;
+            font-size: 1rem;
             transition: 0.25s ease-in-out;
 
             color: white;
@@ -192,62 +192,31 @@
 
 
 
-        .heromodule {
-            width: 100%;
-            height: 30vw;
-            position: relative;
-            z-index: -1;
-        }
-
-        .heromodule::before {
-            content: "";
-            width: 100%;
-            height: 30vw;
-            position: absolute;
+        .hero-banner {
+            min-height: 60vh;
             background-image: url(https://media.istockphoto.com/id/1023119736/photo/national-flags.jpg?s=612x612&w=0&k=20&c=d_h3bhP7W9BRv1_YXEwJCGPScus6OWuLDg_n4Jn4kBo=);
-
             background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-blend-mode: darken;
+            background-color: rgba(0, 0, 0, 0.47);
 
-            background-position-y: 50%;
-            filter: brightness(50%);
+            padding: 5%;
         }
 
-        .hero-module-inside {
-            position: relative;
-        }
-
-
-        .hero {
-            width: 100%;
-            margin: 0;
-            height: 45vw;
+        .hero-banner h1,
+        .hero-banner p,
+        .our-team h1,
+        .our-team p {
             color: white;
-
-        }
-
-        .herotitle {
-            margin-top: 7%;
-            font-family: 'Playfair Display', serif;
-            transform: translateY(30%);
-            font-size: 7vw;
-            padding: 20px;
-            height: 1vw;
-        }
-
-        .herotext {
-            font-family: 'Noto Sans', sans-serif;
-            font-weight: 300;
-            width: 100%;
-            padding: 0;
-            font-size: 1.3vw;
-
         }
 
         /* Start of Enquiry*/
 
-        .enquirycontainer{
-            padding:0;
+        .enquirycontainer {
+            padding: 0;
         }
+
         .enquiryrow {
             width: 100%;
             height: 30vw;
@@ -305,6 +274,7 @@
 
 
         }
+
         /*End of Enquuiry*/
 
 
@@ -503,21 +473,18 @@
     </div>
     <!--Navbar ends here-->
 
-    <!--Hero section-->
-
-    <div class="heromodule">
-        <div class="hero-module-inside">
-            <div class="row hero text-center ">
-                <div class="herotitle text-center">Country Restrictions
-                    <div class="herotext">
-                        Get the latest updates on country restrictions and their quarantine policies
-                    </div>
-                </div>
-
-
-            </div>
+    <!-- Hero Banner -->
+    <section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
+        <div class="text-center">
+            <h1 style="text-transform: uppercase; font-size: 4rem; line-height: 3.5rem; font-family: 'Playfair Display', serif;">
+                Country Restrictions
+            </h1>
+            <p class="pt-4 text-center">
+                Get the latest updates on country restrictions and their quarantine policies
+            </p>
         </div>
-    </div>
+    </section>
+
 
     <!--Countries List-->
     <div class="container-fluid text-center country-container ">
@@ -554,7 +521,7 @@
                 <div class="country-title "><span class="fi fi-in country-flag"></span>India</div>
             </div>
             <div class="col-3">
-               
+
                 <div class="country-details">
                     <ul class="country-list">
                         <li>PCR Test Required</li>
@@ -622,7 +589,7 @@
             </div>
             <div class="col-2"></div>
         </div>
-        
+
 
         <a href="#" class="btn btn-outline-secondary btn-country-hollow">View all Countries</a>
 
