--- a/Garry/pcr.html
+++ b/Garry/pcr.html
@@ -456,6 +456,19 @@
             font-size: 1.5rem;
             font-weight: 700;
         }
+        .hero-banner {
+    min-height: 60vh;
+    background-image: url('image/bg.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.47);
+    padding: 5%;
+}
+h1 {
+    font-family: 'Playfair Display', serif;
+}
     </style>
 </head>
     </style>
@@ -487,11 +500,14 @@
     <div class="col"></div>
 </div>
 <!--Navbar ends here-->
-    <div class="row hero text-center ">
-        <h1 class="herotitle">PCR</h1>
-        <h1 class="herotitle">Swab Test</h1>
+<section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
+    <div class="text-center">
+        <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
+            PCR Swab Test
+        </h1>
 
     </div>
+</section>
 
     </div>
     <div class="box1">
@@ -522,8 +538,11 @@
         </div>
     </div>
     <div class="box2">
-        <h3 style="text-align:Left; color:white; font-size: 2.8vw;">Options</h3>
-        <br>
+        <h1 style="text-transform: uppercase; font-size: 4rem; color: #333333; font-family: 'Playfair Display';"
+        class="text-center">
+        Options
+    </h1>
+    <hr style="width: 50px; color: #333333; opacity: 1; border-top: 1.5px solid; margin: 1.5rem 0;" class="mx-auto">
         <div class="row">
             <div class="col">
                 <div class="plans">
