--- a/Garry/sart.html
+++ b/Garry/sart.html
@@ -470,6 +470,19 @@
             font-weight: 700;
             font-family: 'Playfair Display', sans-serif;
         }
+        .hero-banner {
+    min-height: 60vh;
+    background-image: url('image/sart.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-blend-mode: darken;
+    background-color: rgba(0, 0, 0, 0.47);
+    padding: 5%;
+}
+h1 {
+    font-family: 'Playfair Display', serif;
+}
 
     </style>
 </head>
@@ -500,10 +513,14 @@
     <div class="col"></div>
 </div>
 <!--Navbar ends here-->
-    <div class="row hero text-center ">
-        <h1 class="herotitle">Supervised</h1>
-        <h1 class="herotitle">Antigen Rapid Test</h1>
+<section class="hero-banner container-fluid d-flex justify-content-center align-items-center">
+    <div class="text-center">
+        <h1 style="text-transform: uppercase; font-size: 5rem; line-height: 5rem;">
+            Supervised ARt
+        </h1>
+
     </div>
+</section>
     </div>
     <div class="box1">
         <h1 style="font-size: 4rem; color: #333333; font-family: 'Playfair Display', sans-serif;"
