Added meta titles and desc to products pages

--- a/Garry/products.html
+++ b/Garry/products.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Aurora Medical : Our Services</title>
+    <meta name="description" content="Aurora Medical offers the best Covid-19 test and prevention schemes for travellers of all ages to be able to travel fuss-free, without worry. Aurora medical offers Covid-19 related services of all kinds for all purposes. ">
+    <meta name="keywords" content="Mobile Departure Swab test, PCR Test, Covid-19 Test, Aurora Medical">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -365,7 +368,7 @@ h1 {
     <div class="box1">
         <div class="container">
             <div class="row">
-                <div class="col-4">
+                <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="image/pcrtest.png" alt="PCR Test">
                         <div class="card-body">
@@ -375,7 +378,7 @@ h1 {
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="image/sart_products.png" alt="SART">
                         <div class="card-body">
@@ -385,7 +388,7 @@ h1 {
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="image/mobile_products.jpg" alt="mobile departure">
                         <div class="card-body">
@@ -397,7 +400,7 @@ h1 {
                 </div>
             </div>
             <div class="row secondrow">
-                <div class="col-4">
+                <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="image/serology.jfif" alt="serology">
                         <div class="card-body">
@@ -407,7 +410,7 @@ h1 {
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="image/bundles.jpg" alt="bundles">
                         <div class="card-body">
@@ -417,7 +420,7 @@ h1 {
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col">
                     <div class="card mx-auto" style="width: 18rem;">
                         <img class="card-img-top" src="image/travel.jpeg" alt="Book now">
                         <div class="card-body">
