--- a/Garry/igm.html
+++ b/Garry/igm.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Aurora Medical : Serology / IGM Test</title>
+    <meta name="description" content="Aurora Medical offers Serology Tests, which detects the presence of previous antibodies to find out if your vaccines are working or your body is recovering.">
+    <meta name="keywords" content="Serology Test, IGM Test, Mobile Departure Swab test, PCR Test, Covid-19 Test, Aurora Medical">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
