--- a/Garry/mobile.html
+++ b/Garry/mobile.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Aurora Medical : Mobile Pre Departure Test</title>
+    <meta name="description" content="Aurora Medical's mobile departure swab test combines both the reliability of a PCR and the convenience of a SART into one. ">
+    <meta name="keywords" content="Mobile Departure Swab test, PCR Test, Covid-19 Test, Aurora Medical">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -174,75 +177,76 @@
 
  /*Navbar css ends here*/
 
- /* Start of Footer CSS*/
- .footer-container {
-     background-color: #41B188;
-     color: white;
-     font-size: 1.1vw;
-     margin: 0;
+/* Start of Footer CSS*/
+.footer-container {
+            background-color: #41B188;
+            color: white;
+            font-size: 1.1vw;
+            margin: 0;
 
 
- }
+        }
 
- .quicklinkscol {
-     margin-top: 3%;
- }
+        .quicklinkscol {
+            margin-top: 3%;
+        }
 
- .quicklinkstitle {
-     font-weight: 400;
-     padding-bottom: 2%;
-     color: white;
- }
+        .quicklinkstitle {
+            font-weight: 400;
+            padding-bottom: 2%;
+            color: white;
+        }
 
- .quicklinks {
+        .quicklinks {
 
-     color: white;
-     transition: 0.2s ease-in-out
- }
+            color: white;
+            transition: 0.2s ease-in-out
+        }
 
- .quicklinks:hover {
+        .quicklinks:hover {
 
-     color: #FEBB60;
- }
+            color: #FEBB60;
+        }
 
- .quicklinksdiv {
-     padding: 1%;
- }
+        .quicklinksdiv {
+            padding: 1%;
+        }
 
- .midcol {
-     margin-top: 3%;
- }
+        .midcol {
+            margin-top: 3%;
+        }
 
- .midlinks {
-     font-weight: 400;
-     padding: 3%;
- }
+        .midlinks {
+            font-weight: 400;
+            padding: 3%;
+        }
 
- .contactcol {
-     margin-top: 3%;
- }
+        .contactcol {
+            margin-top: 3%;
+        }
 
- .contactdiv {
-     padding-top: 1%;
-     padding-bottom: 1%;
- }
+        .contactdiv {
+            padding-top: 1%;
+            padding-bottom: 1%;
+        }
 
- .footerlogorow {
-     padding-top: 2%;
-     padding-bottom: 3%;
- }
+        .footerlogorow {
+            padding-top: 2%;
+            padding-bottom: 3%;
+        }
 
- .footer-logo {
-     color: white;
-     margin: 4%;
-     transition: 0.2s ease-in-out;
- }
+        .footer-logo {
+            color: white;
+            margin: 4%;
+            transition: 0.2s ease-in-out;
+        }
 
- .footer-logo:hover {
-     color: #FEBB60;
- }
+        .footer-logo:hover {
+            color: #FEBB60;
+        }
 
- /*End of footer css*/
+        /*End of footer css*/
+
 
         .hero {
             background-image: url("image/bg.png");
