--- a/Garry/pcr.html
+++ b/Garry/pcr.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Aurora Medical : PCR Test</title>
+    <meta name="description" content="Aurora Medical offers the Polymerase Chain Reaction (PCR) Test, the most accurate test for COVID-19. ">
+    <meta name="keywords" content="Mobile Departure Swab test, PCR Test, Covid-19 Test, Aurora Medical">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
