--- a/Garry/sart.html
+++ b/Garry/sart.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Aurora Medical : Supervised ART Test</title>
+    <meta name="description" content="Aurora Medical offers the Supervised Antigen Rapid Testing, the most convenient and flexible test for testing from the comfort of your home. ">
+    <meta name="keywords" content="Supervised ART Test, PCR Test, Covid-19 Test, Aurora Medical">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
