--- a/Garry/sitemap.html
+++ b/Garry/sitemap.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <title>Aurora Medical : Sitemap</title>
+    <meta name="description" content="Sitemap for Aurora Medical">
+    <meta name="keywords" content="PCR Test, Covid-19 Test, Aurora Medical, Sitemap">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
