--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -17,35 +17,41 @@
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="./contact-us-style.css">
+    <link rel="stylesheet" href="../css/contact-us-style.css">
     <title>Contact Us</title>
 </head>
 <body>
-    <!--Navbar start-->
-    <div id="fixedheader" class="row header">
-        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
-                class="logo logopt2">Medical</a></div>
-        <div class="col-3"></div>
-        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
+    <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap position-fixed" style="background-color: white">
+        <div style="color: #41B188">
+            <h1 style="font-size: 2rem; font-weight: 400;">
+                Aurora <span style="color: #333333">Medical</span>
+            </h1>
+        </div>
 
-    </div>
+        <div class="d-flex align-items-center" style="gap: 1rem;">
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">Products</a></div>
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">News</a></div>
+            <div class="p-2"><a href="#"><button href="#" class="bookbtn p-2">Book Now</button></a></div>
+        </div>
+    </nav>
 
-    <!--This is a duplicate header to create the spacing between the top of the screen and the next element, leave it as part of the header-->
-    <div class="row header">
-        <div class="col-3 navbox"><a href="home.html" class="logo">Aurora Medical</a></div>
-        <div class="col-2"></div>
-        <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-        <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-        <div class="col navbox"><a href="#"><button href="#" class="bookbtn">Book Now</button></a></div>
-        <div class="col"></div>
-    </div>
-    <!--Navbar ends here-->
+    <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap">
+        <div style="color: #41B188">
+            <h1 style="font-size: 2rem; font-weight: 400;">
+                Aurora <span style="color: #333333">Medical</span>
+            </h1>
+        </div>
+
+        <div class="d-flex align-items-center" style="gap: 1rem;">
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">Products</a></div>
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
+            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">News</a></div>
+            <div class="p-2"><a href="#"><button href="#" class="bookbtn p-2">Book Now</button></a></div>
+        </div>
+    </nav>
 
     <!-- Hero Banner -->
     <section class="hero-banner container-fluid d-flex align-items-center justify-content-center">
@@ -56,7 +62,7 @@
             <p class="pt-4">
                 Whether you're curious about our packages, services or wish to book a test <br> <b>We are here for any and all of your needs</b>
             </p>
-            <button class="button mt-5">
+            <button class="button mt-5" id="slide-to-form-btn">
                 Drop a Message
             </button>
         </div>
@@ -74,7 +80,7 @@
             <div class="col-lg-4 col-md-12 py-5">
                 <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; border: none; border-radius: 0; padding: 3rem 2rem;">
                     <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
-                        <img src="./quiz_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                        <img src="../assets/icons/quiz_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     </div>
                     <h2 class="mt-5 text-center">
                         FAQ
@@ -90,7 +96,7 @@
             <div class="col-lg-4 col-md-12 py-5">
                 <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; border: none; border-radius: 0; padding: 3rem 2rem;">
                     <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
-                        <img src="./package_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                        <img src="../assets/icons/package_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     </div>
                     <h2 class="mt-5 text-center">
                         Find Packages
@@ -106,7 +112,7 @@
             <div class="col-lg-4 col-md-12 py-5">
                 <div class="card mx-auto shadow position-relative" style="background-color: white; height: 34rem; border: none; border-radius: 0; padding: 3rem 2rem;">
                     <div class="shadow mx-auto" style="width: 150px; height: 150px; border-radius: 75px;">
-                        <img src="./info_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                        <img src="../assets/icons/info_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                     </div>
                     <h2 class="mt-5 text-center">
                         Border Info
@@ -126,8 +132,8 @@
 
     <!-- Contact Form Section -->
     <section class="contact-form container-fluid">
-        <div class="row w-100 h-100">
-            <div class="col-4 d-flex flex-column justify-content-between pe-4">
+        <div class="row w-100 h-100 gy-4">
+            <div class="col-md-12 col-lg-4 d-flex flex-column justify-content-between pe-4">
                 <div class="text-heading">
                     <h1 style="font-size: 1.5rem;">
                         Wanna
@@ -143,7 +149,7 @@
                     Wonder how your paticulars will be used? <br> Checkout our <b style="text-decoration: underline"> Privacy Policy </b>
                 </p>
             </div>
-            <div class="col-8" style="padding: 3rem; background-color: #FEBB60">
+            <div class="col-md-12 col-lg-8" style="padding: 3rem; background-color: #FEBB60">
                 <form action="/">
                     <div class="name mb-5">
                         <h1 style="font-size: 1.25rem" class="mb-4">
@@ -270,6 +276,12 @@
         }
 
         window.initMap = initMap;
+
+        // smooth sliding to contact form
+        let btn = document.querySelector('#slide-to-form-btn');
+        btn.addEventListener('click', (e) => {
+            document.querySelector('.contact-form').scrollIntoView({behavior: 'smooth'})
+        })
     </script>
 </body>
 </html>
