--- a/Garry/mobile.html
+++ b/Garry/mobile.html
@@ -479,7 +479,7 @@ h1 {
     <div class="col-3 navbox"><a href="home.html" class="logo">Aurora</a><a href="home.html"
             class="logo logopt2">Medical</a></div>
     <div class="col-3"></div>
-    <div class="col navbox "><a href="#" class="navbtn hover-underline-animation">Products</a></div>
+    <div class="col navbox "><a href="products.html" class="navbtn hover-underline-animation">Products</a></div>
     <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
     <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
     <div class="col navbox"><a href="#" class="navbtn hover-underline-animation">News</a></div>
