[Brandon] Update index.html

--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -21,6 +21,7 @@
     <title>Contact Us</title>
 </head>
 <body>
+    <!-- navbar -->
     <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap position-fixed" style="background-color: white">
         <div style="color: #41B188">
             <h1 style="font-size: 2rem; font-weight: 400;">
@@ -37,19 +38,12 @@
         </div>
     </nav>
 
+    <!-- space holder -->
     <nav class="container-fluid d-flex justify-content-between align-items-center p-3 flex-wrap">
-        <div style="color: #41B188">
+        <div style="color: white">
             <h1 style="font-size: 2rem; font-weight: 400;">
-                Aurora <span style="color: #333333">Medical</span>
+                Aurora
             </h1>
-        </div>
-
-        <div class="d-flex align-items-center" style="gap: 1rem;">
-            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">Products</a></div>
-            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">FAQ</a></div>
-            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">Contact Us</a></div>
-            <div class="p-2"><a href="#" class="navbtn hover-underline-animation">News</a></div>
-            <div class="p-2"><a href="#"><button href="#" class="bookbtn p-2">Book Now</button></a></div>
         </div>
     </nav>
 
